

@startuml
!define table(name, desk) class name as "desk" << (T,#FFAAAA) >>
!define primary_key(x) <u><b>x</b></u>
!define fk_index(x) <color:green><b>x</b></color>
hide methods
hide stereotypes

table(Currency, Currency\nВалюта) {
  primary_key(id)
  name String_20
}

table(Account, Account\nCчета) {
  primary_key(id)
  name
  fk_index(currency_id-->Currency:id)
  fk_index(parent_id-->id)
}

table(Category, Category\nКатегория) {
  primary_key(id)
  name
  fk_index(parent_id-->id)
}

table(Transaction, Transaction\nОперации) {
    primary_key(id)
    fk_index(account_id)
    date DateTime
    dir Enum
    fk_index(category_id-->Category:id)
    source
    total
    volume
    amount
    description
}

' relationships
' one-to-one relationship

' one to may relationship
Account --> Account : "id-->parrent_id"
Account --> Transaction : "id-->account_id"
Currency --> Account : "id-->current_id"
Category --> Category : "id-->parent_id"
Category --> Transaction : "id-->category_id"

' many to many relationship
' Add mark if you like


@enduml

